--- a/viewer/Makefile
+++ b/viewer/Makefile
@@ -1,3 +1,5 @@
+.PHONY: all clean docker
+
 all: clean build
 
 clean:
@@ -8,4 +10,4 @@ build:
 	electron-packager . Viewer --platform=darwin,linux,win32 --arch=x64 --version=0.35.4 --overwrite --out=app --ignore=app
 
 docker:
-	docker build -t dongjoon/testclusters docker
+	docker build -t dongjoon/testcluster docker
