--- a/viewer/docker/Dockerfile
+++ b/viewer/docker/Dockerfile
@@ -1,6 +1,8 @@
 FROM reefrt/mesos0.25
 MAINTAINER Dongjoon Hyun <dongjoon@apache.org>
 
+COPY core-site.xml /usr/local/hadoop/etc/hadoop/
+COPY rack-awareness.py /usr/local/hadoop/etc/hadoop/
 COPY init-nn.sh /root/
 
 EXPOSE 22 5050 7077 8020 8030 8031 8032 8033 8040 8042 8080 8088 10000 50010 50020 50060 50070 50075 50090
