Add depress and deploy command

--- a/viewer/Makefile
+++ b/viewer/Makefile
@@ -23,8 +23,19 @@ clean:
 	rm -rf app
 
 build:
-	mkdir app
+	mkdir -p app
 	electron-packager . Viewer --platform=darwin,linux,win32 --arch=x64 --version=0.36.2 --overwrite --out=app --ignore=app
+
+compress:
+	cd app && rm -f *.zip && \
+	zip -9 -r Viewer-darwin-x64.zip Viewer-darwin-x64 && \
+	zip -9 -r Viewer-linux-x64.zip Viewer-linux-x64 && \
+	zip -9 -r Viewer-win32-x64.zip Viewer-win32-x64
+
+deploy:
+	aws s3 cp app/Viewer-darwin-x64.zip s3://sfbasoft/app/
+	aws s3 cp app/Viewer-linux-x64.zip s3://sfbasoft/app/
+	aws s3 cp app/Viewer-win32-x64.zip s3://sfbasoft/app/
 
 docker:
 	docker build -t dongjoon/testcluster docker
